# kattis_cpp_skeleton

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .skeleton_config  CMakeLists.txt  LICENSE  README.md  dependencies  library_skeleton.hpp  problem_skeleton.cpp
src/problems/hello/: hello.cpp
